# mark

./: Cargo.toml
scripts/: Cargo.toml  make_apps.rs
src/: config.rs  main.rs  schema.rs
src/apps/: 1password-4.toml  2do.toml  ack.toml  act.toml  adium.toml  adobe-camera-raw.toml  aerc.toml  affinity-designer.toml  affinity-photo.toml  affinity-publisher.toml  airflow.toml  airmail.toml  akamai-cli.toml  alacritty.toml  alt-tab.toml  amethyst.toml  ancient-domains-of-mystery.toml  androidstudio-13.toml  ansible.toml  appcleaner.toml  appcode-2.toml  appcode-3.toml  appcode-31.toml  appcode-32.toml  apple-music.toml  apptivate.toml  arara.toml  aria2c.toml  arm.toml  asciinema.toml  asdf.toml  aspell.toml  astyle.toml  atlantis.toml  atom.toml  audacious.toml  auskey.toml  autokey.toml  awareness.toml  aws.toml  (+512 more)
src/commands/: apply.rs  backup.rs  mod.rs
