[package]
name = "mark"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# https://github.com/JoshMcguigan/cargo-run-script
# https://github.com/fornwall/rust-script/
[package.metadata.scripts]
"apps:make" = "rust-script ./scripts/make_apps.rs"

[[bin]]
name = "mark"
path = "./src/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.10", features = ["derive"] }
toml = "0.5.9"
walkdir = "2"
confy = "0.5.0"
serde = { version = "1.0.145", features = ["derive"] }
shadow-rs = "0.16.3"
rust-embed = "6.4.1"
directories-next = "2.0.0"
glob = "0.3.0"
ignore = "0.4.18"
anyhow = "1.0.65"
owo-colors = "3.5.0"
spinach = "2.1.0"

[build-dependencies]
shadow-rs = "0.16.3"
