[package]
name = "make_apps"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "make_apps"
path = "./make_apps.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cmd_lib = "1.3.0"
walkdir = "2"
toml = "0.5.9"
configparser = "3.0.2"
serde = { version = "1.0.145", features = ["derive"] }

